@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_support.h,v 1.39 2009-03-24 01:59:01 guru Exp $
+ *	$Id: gmt_support.h,v 1.40 2009-04-09 23:39:17 guru Exp $
  *
  *	Copyright (c) 1991-2009 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -18,6 +18,17 @@
 
 #ifndef _GMT_SUPPORT_H
 #define _GMT_SUPPORT_H
+
+struct GMT_GAP_INFO {
+	int method;	/* How distances are computed */
+	double gap;	/* The critical distance */
+};
+
+#define GMT_GAP_IN_X		1
+#define GMT_GAP_IN_Y		2
+#define GMT_GAP_IN_GDIST	3
+#define GMT_GAP_IN_CDIST	4
+#define GMT_GAP_IN_PDIST	5
 
 EXTERN_MSC int GMT_err_pass (int err, char *file);
 EXTERN_MSC void GMT_err_fail (int err, char *file);
@@ -90,6 +101,9 @@ EXTERN_MSC char *GMT_convertpen (struct GMT_PEN *pen, int *width, int *offset, i
 EXTERN_MSC void GMT_fourt (float *data, GMT_LONG *nn, int ndim, int ksign, int iform, float *work);
 EXTERN_MSC int GMT_get_coordinate_label (char *string, struct GMT_PLOT_CALCLOCK *P, char *format, struct GMT_PLOT_AXIS_ITEM *T, double coord);
 EXTERN_MSC int GMT_get_proj3D (char *line, double *az, double *el);
+EXTERN_MSC BOOLEAN GMT_set_gap_param (char *txt, struct GMT_GAP_INFO *G);
+EXTERN_MSC BOOLEAN GMT_gap_detected (int rec, double this_x, double this_y, double prev_x, double prev_y, struct GMT_GAP_INFO *G);
+
 #ifdef DEBUG
 EXTERN_MSC void *GMT_memory_func (void *prev_addr, size_t nelem, size_t size, char *progname, char *fname, int line);
 EXTERN_MSC void GMT_free_func (void *addr, char *fname, int line);
